--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test:api": "node test-api.js"
   },
   "dependencies": {
     "aos": "^2.3.4",
     "isotope-layout": "^3.0.6",
+    "mysql2": "^3.6.5",
     "next": "^14.2.23",
     "react": "^18.3.1",
     "react-bootstrap": "^1.6.1",
